# django-semantic-search

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: run-tests.yaml
api/backends/: index.html
api/documents/: index.html
api/embeddings/: index.html
docs/: index.md  quickstart.md  usage.md
docs/api/: backends.md  documents.md  embeddings.md
examples/simple_django_app/: manage.py  requirements.txt
examples/simple_django_app/products/: admin.py  documents.py  models.py  views.py
examples/simple_django_app/products/migrations/: 0001_initial.py
examples/simple_django_app/simple_django_app/: asgi.py  settings.py  urls.py  wsgi.py
quickstart/: index.html
search/: search_index.json
src/django_semantic_search/: __init__.py  apps.py  decorators.py  default_settings.py  documents.py  models.py  types.py  utils.py
src/django_semantic_search/backends/: base.py  qdrant.py  types.py
src/django_semantic_search/embeddings/: __init__.py  base.py  sentence_transformers.py
tests/: conftest.py  mocks.py
tests/django_semantic_search/: test_decorators.py  test_documents.py
usage/: index.html
